--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
     "react-typed": "^2.0.12",
